--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "cross-env": "^10.1.0",
+    "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
