--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd frontend && npm install && npm run build"
+  command = "cd frontend && npm ci && (chmod +x node_modules/.bin/vite || true) && npm run build"
   publish = "frontend/dist"
 
 [[redirects]]
